--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
     - name: set up JDK 8
       uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: '1.8'
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
