--- a/.github/workflows/android2.yml
+++ b/.github/workflows/android2.yml
@@ -13,17 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: set up JDK 1.8
+    - uses: actions/setup-java@v2
+    - uses: joschi/setup-jdk@v2
     - name: Build with Gradle
-      run: ./gradlew build
+      run: gradle build
     - name: compile sorter
       run: javac Homework1.java
     - name: run sorter
