--- a/.github/workflows/android2.yml
+++ b/.github/workflows/android2.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 1.8
-    - uses: actions/setup-java@v2
-    - uses: joschi/setup-jdk@v2
+      uses: joschi/setup-jdk@v2
     - name: Build with Gradle
       run: gradle build
     - name: compile sorter
