--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -16,11 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+    - name: Setup Java JDK
+      uses: actions/setup-java@v2.3.1
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
     - name: run sorting app and test
