--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -18,6 +18,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup Java JDK
       uses: actions/setup-java@v2.3.1
+      with:
+        java-version: '11'  
+        
     - name: run sorting app and test
       run: | 
         javac Homework1.java
